fix - remove making font way too small

--- a/capstone/static/css/scss/_elements.scss
+++ b/capstone/static/css/scss/_elements.scss
@@ -82,11 +82,9 @@
   margin-left: -3rem;
 }
 
-h1, .h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: $font-serif;
-  @include media-breakpoint-down(md) {
-    font-size: 20%;
-  }
 }
 
 ul {
